@@ -102,6 +102,7 @@ class BusinessResourceIntegrationTests {
             "\"created\":\"%s\"," +
             "\"role\":\"%s\"," +
             "\"businessesAdministered\":[null]," +
+            "\"images\":%s," +
             "\"dateOfBirth\":\"%s\"," +
             "\"phoneNumber\":\"%s\"," +
             "\"homeAddress\":{\"streetNumber\":\"%s\",\"streetName\":\"%s\",\"suburb\":\"%s\",\"city\":\"%s\",\"region\":\"%s\",\"country\":\"%s\",\"postcode\":\"%s\"}}]";
@@ -668,6 +669,7 @@ class BusinessResourceIntegrationTests {
                     "\"businessesAdministered\":[" +
                     "null" +
                     "]," +
+                    "\"images\":[]," +
                     "\"dateOfBirth\":\"2007-02-02\"," +
                     "\"phoneNumber\":\"0271316\"," +
                     "\"homeAddress\":{" +
@@ -729,6 +731,7 @@ class BusinessResourceIntegrationTests {
                 "\"businessesAdministered\":[" +
                 "null" +
                 "]," +
+                "\"images\":[]," +
                 "\"dateOfBirth\":\"2007-02-02\"," +
                 "\"phoneNumber\":\"0271316\"," +
                 "\"homeAddress\":{" +
@@ -806,6 +809,7 @@ class BusinessResourceIntegrationTests {
                 "\"businessesAdministered\":[" +
                 "null" +
                 "]," +
+                "\"images\":[]," +
                 "\"dateOfBirth\":\"2007-02-02\"," +
                 "\"phoneNumber\":\"0271316\"," +
                 "\"homeAddress\":{" +
@@ -1999,14 +2003,16 @@ class BusinessResourceIntegrationTests {
     void canSearchBusinessesByNameWhenBusinessExistsWithDgaaCookieTest() throws Exception {
         // given
         String searchQuery = "NAME";
-        List<String> names = Arrays.asList(searchQuery);
+        List<String> names = List.of(searchQuery);
 
-        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(), user.getLastName(),
-                user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(), user.getCreated(), user.getRole(),
-                user.getDateOfBirth(), user.getPhoneNumber(), address.getStreetNumber(), address.getStreetName(), address.getSuburb(),
-                address.getCity(), address.getRegion(), address.getCountry(), address.getPostcode());
-        expectedJson = "[" + String.format(expectedBusinessJson, business.getId(), expectedUserJson, business.getPrimaryAdministratorId(),
-                business.getName(), business.getDescription(), business.getAddress(), business.getBusinessType(), business.getCreated()) + "]";
+        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(),
+                user.getLastName(), user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(),
+                user.getCreated(), user.getRole(), "[]", user.getDateOfBirth(), user.getPhoneNumber(),
+                address.getStreetNumber(), address.getStreetName(), address.getSuburb(), address.getCity(),
+                address.getRegion(), address.getCountry(), address.getPostcode());
+        expectedJson = "[" + String.format(expectedBusinessJson, business.getId(), expectedUserJson,
+                business.getPrimaryAdministratorId(), business.getName(), business.getDescription(),
+                business.getAddress(), business.getBusinessType(), business.getCreated()) + "]";
 
         // when
         List<Business> list = List.of(business);
@@ -2034,14 +2040,16 @@ class BusinessResourceIntegrationTests {
     void canSearchBusinessesWhenBusinessExistsWithValidOrderByAndPageParamsTest() throws Exception {
         // given
         String searchQuery = "NAME";
-        List<String> names = Arrays.asList(searchQuery);
+        List<String> names = List.of(searchQuery);
 
-        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(), user.getLastName(),
-                user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(), user.getCreated(), user.getRole(),
-                user.getDateOfBirth(), user.getPhoneNumber(), address.getStreetNumber(), address.getStreetName(), address.getSuburb(),
-                address.getCity(), address.getRegion(), address.getCountry(), address.getPostcode());
-        expectedJson = "[" + String.format(expectedBusinessJson, business.getId(), expectedUserJson, business.getPrimaryAdministratorId(),
-                business.getName(), business.getDescription(), business.getAddress(), business.getBusinessType(), business.getCreated()) + "]";
+        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(),
+                user.getLastName(), user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(),
+                user.getCreated(), user.getRole(), "[]", user.getDateOfBirth(), user.getPhoneNumber(),
+                address.getStreetNumber(), address.getStreetName(), address.getSuburb(), address.getCity(),
+                address.getRegion(), address.getCountry(), address.getPostcode());
+        expectedJson = "[" + String.format(expectedBusinessJson, business.getId(), expectedUserJson,
+                business.getPrimaryAdministratorId(), business.getName(), business.getDescription(),
+                business.getAddress(), business.getBusinessType(), business.getCreated()) + "]";
 
 
         // when
@@ -2072,14 +2080,16 @@ class BusinessResourceIntegrationTests {
     void canSearchBusinessesByNameWhenBusinessExistsWithUserCookieTest() throws Exception {
         // given
         String searchQuery = "NAME";
-        List<String> names = Arrays.asList(searchQuery);
+        List<String> names = List.of(searchQuery);
 
-        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(), user.getLastName(),
-                user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(), user.getCreated(), user.getRole(),
-                user.getDateOfBirth(), user.getPhoneNumber(), address.getStreetNumber(), address.getStreetName(), address.getSuburb(),
-                address.getCity(), address.getRegion(), address.getCountry(), address.getPostcode());
-        expectedJson = "[" + String.format(expectedBusinessJson, business.getId(), expectedUserJson, business.getPrimaryAdministratorId(),
-                business.getName(), business.getDescription(), business.getAddress(), business.getBusinessType(), business.getCreated()) + "]";
+        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(),
+                user.getLastName(), user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(),
+                user.getCreated(), user.getRole(), "[]", user.getDateOfBirth(), user.getPhoneNumber(),
+                address.getStreetNumber(), address.getStreetName(), address.getSuburb(), address.getCity(),
+                address.getRegion(), address.getCountry(), address.getPostcode());
+        expectedJson = "[" + String.format(expectedBusinessJson, business.getId(), expectedUserJson,
+                business.getPrimaryAdministratorId(), business.getName(), business.getDescription(),
+                business.getAddress(), business.getBusinessType(), business.getCreated()) + "]";
 
         // when
         List<Business> list = List.of(business);
@@ -2106,7 +2116,7 @@ class BusinessResourceIntegrationTests {
     void emptySearchBusinessesByNameWhenBusinessDoesntExistTest() throws Exception {
         // given
         String searchQuery = "BUSINESS";
-        List<String> names = Arrays.asList(searchQuery);
+        List<String> names = List.of(searchQuery);
         expectedJson = "[]";
 
         // when
@@ -2223,12 +2233,14 @@ class BusinessResourceIntegrationTests {
         String businessType = "ACCOMMODATION_AND_FOOD_SERVICES";
         BusinessType convertedBusinessType = BusinessType.ACCOMMODATION_AND_FOOD_SERVICES;
 
-        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(), user.getLastName(),
-                user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(), user.getCreated(), user.getRole(),
-                user.getDateOfBirth(), user.getPhoneNumber(), address.getStreetNumber(), address.getStreetName(), address.getSuburb(),
-                address.getCity(), address.getRegion(), address.getCountry(), address.getPostcode());
-        expectedJson = "[" + String.format(expectedBusinessJson, business.getId(), expectedUserJson, business.getPrimaryAdministratorId(),
-                business.getName(), business.getDescription(), business.getAddress(), business.getBusinessType(), business.getCreated()) + "]";
+        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(),
+                user.getLastName(), user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(),
+                user.getCreated(), user.getRole(), "[]", user.getDateOfBirth(), user.getPhoneNumber(),
+                address.getStreetNumber(), address.getStreetName(), address.getSuburb(), address.getCity(),
+                address.getRegion(), address.getCountry(), address.getPostcode());
+        expectedJson = "[" + String.format(expectedBusinessJson, business.getId(), expectedUserJson,
+                business.getPrimaryAdministratorId(), business.getName(), business.getDescription(),
+                business.getAddress(), business.getBusinessType(), business.getCreated()) + "]";
 
         // when
         List<Business> list = List.of(business);
@@ -2258,14 +2270,16 @@ class BusinessResourceIntegrationTests {
         String businessType = "ACCOMMODATION_AND_FOOD_SERVICES";
         BusinessType convertedBusinessType = BusinessType.ACCOMMODATION_AND_FOOD_SERVICES;
         String searchQuery = "NAME";
-        List<String> names = Arrays.asList(searchQuery);
+        List<String> names = List.of(searchQuery);
 
-        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(), user.getLastName(),
-                user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(), user.getCreated(), user.getRole(),
-                user.getDateOfBirth(), user.getPhoneNumber(), address.getStreetNumber(), address.getStreetName(), address.getSuburb(),
-                address.getCity(), address.getRegion(), address.getCountry(), address.getPostcode());
-        expectedJson = "[" + String.format(expectedBusinessJson, business.getId(), expectedUserJson, business.getPrimaryAdministratorId(),
-                business.getName(), business.getDescription(), business.getAddress(), business.getBusinessType(), business.getCreated()) + "]";
+        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(),
+                user.getLastName(), user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(),
+                user.getCreated(), user.getRole(), "[]", user.getDateOfBirth(), user.getPhoneNumber(),
+                address.getStreetNumber(), address.getStreetName(), address.getSuburb(), address.getCity(),
+                address.getRegion(), address.getCountry(), address.getPostcode());
+        expectedJson = "[" + String.format(expectedBusinessJson, business.getId(), expectedUserJson,
+                business.getPrimaryAdministratorId(), business.getName(), business.getDescription(),
+                business.getAddress(), business.getBusinessType(), business.getCreated()) + "]";
 
         // when
         List<Business> list = List.of(business);
